# picod

./: .gitignore  README.md
DAEMON/: CMakeLists.txt  picod.c  picod.uf2
EXAMPLES/py_picod/: DHT.py  adc.py  callback.py  continuous_servo.py  flash.py  i2c_spi.py  monitor.py  picod_mcp3008.py  pwm_read.py
PYTHON/: README.md  picod.py  setup.py
